kubernetes/openclaw/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: frank

spec:
  selector:
    app.kubernetes.io/name: openclaw
    app.kubernetes.io/instance: openclaw
  ports:
  - name: gateway
    protocol: TCP
    port: 18789
