kubernetes/openclaw/ingress-ui.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: frank-ui
  namespace: openclaw
  annotations:
    ak-type: simple

spec:
  ingressClassName: nginx
  rules:
  - host: openclaw.k.oneill.net
    http:
      paths:
      - path: /ui
        pathType: Prefix
        backend:
          service:
            name: frank
            port:
              number: 18789
